# arkham-voice-token

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  tokenmanager.cpp  tokenmanager.h
config/: scenarios.yaml
src/: AudioPlayer.cpp  AudioPlayer.h  Constants.h  MainWindow.cpp  MainWindow.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  SerialCommunicator.cpp  SerialCommunicator.h  TokenManager.cpp  TokenManager.h  Utilities.h  main.cpp
